Fixed always visible scroll bar on Linux

--- a/side-nav/android-like/styles.css
+++ b/side-nav/android-like/styles.css
@@ -29,7 +29,7 @@ html, body {
 .wrapper {
   width: 100vw;
   height: 100vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   display: flex;
   flex-direction: column;
